--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SQlite</string>
+    <string name="deletekontak">Delete Kontak</string>
+    <string name="editkontak">Edit Kontak</string>
 </resources>
